--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -225,7 +225,10 @@
               <h2 class="modal-title"></h2>
               <p class="modal-description"></p>
               <div class="modal-price"></div>
-              <button class="modal-order-button">Заказать</button>
+              <div class="knop">
+                <button class="modal-order-button" data-product-id="" onclick="addToCart(this.dataset.productId)">В корзину</button>
+                <button class="love" data-product-id="" onclick="addIzb(this.dataset.productId)"><img src="../img/favorite.svg"></button>
+              </div>
             </div>
           </div>
         </div>
@@ -292,7 +295,6 @@
         return `
           <div class="product-wrapper" data-product-id="${product.id}">
             <div class="card">
-              <button class="love"><img src=""></button>
               <img src="${product.image}" alt="${product.name}" loading="lazy">
               <div class="text-block">
                 <h3>${product.name}</h3>
@@ -355,25 +357,37 @@
       function openModal(productId) {
         const product = products.find((p) => p.id === productId);
 
-        if (product) {
-          document.querySelector(".modal-image").src = product.image;
-          document.querySelector(".modal-image").alt = product.name;
-          document.querySelector(".modal-title").textContent = product.name;
-          document.querySelector(".modal-description").textContent =
-            product.description;
-          document.querySelector(".modal-price").textContent = formatPrice(
-            product.price
-          );
-          modal.style.display = "block";
-        } else {
-          console.error("Product not found with id:", productId);
-        }
-      }
+  if (product) {
+    // Обновляем контент модалки
+    document.querySelector(".modal-image").src = product.image;
+    document.querySelector(".modal-image").alt = product.name;
+    document.querySelector(".modal-title").textContent = product.name;
+    document.querySelector(".modal-description").textContent = product.description;
+    document.querySelector(".modal-price").textContent = formatPrice(product.price);
+    
+    const modal = document.getElementById("productModal");
+    modal.querySelector(".modal-order-button").dataset.productId = productId;
+    modal.querySelector(".love").dataset.productId = productId;
+    
+    modal.style.display = "block";
+  } else {
+    console.error("Product not found with id:", productId);
+  }
+}
+
+document.addEventListener('click', function(e) {
+  const productCard = e.target.closest('.product-wrapper');
+  if (productCard) {
+    const productId = productCard.dataset.productId;
+    openModal(productId);
+  }
+});
 
       const closeBtn = document.querySelector(".modal .close");
       closeBtn.addEventListener("click", () => {
         modal.style.display = "none";
       });
+
       window.addEventListener("click", (event) => {
         if (event.target == modal) {
           modal.style.display = "none";
@@ -381,6 +395,22 @@
       });
 
       //избранное
+      function addIzb(productId) {
+  let izb = JSON.parse(localStorage.getItem("izb")) || []; 
+  const productToAdd = products.find((product) => product.id === productId); 
+  if (productToAdd) {
+    const existingIzbItem = izb.find((item) => item.id === productId);
+    if (!existingIzbItem) {
+      izb.push(productToAdd);
+      localStorage.setItem("izb", JSON.stringify(izb)); 
+      alert(`${productToAdd.name} добавлен в избранное!`); 
+    } else {
+      alert(`${productToAdd.name} уже в избранном!`);
+    }
+  } else {
+    console.error("Product not found with id:", productId);
+  }
+}
       //корзина
       function addToCart(productId) {
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
