--- a/project pages/zookorzina.html
+++ b/project pages/zookorzina.html
@@ -19,75 +19,72 @@
   </head>
   <body>
     <article>
-    <header>
-      <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo" />
-      <nav>
-        <a href="zoomagazin.html"
-          ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
-        ></a>
-        <a href="zooizbrannoe.html"
-          ><div class="cerb">
-            Избранное
-            <img
-              src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
-            /></div
-        ></a>
-        <a href="#"
-          ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
-        ></a>
-        <a href="#" id="openRegistration"
-          >
-          <a href="#" id="openLogin">
-          <div class="cerb">
-            Войти
-            <img
-              src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
-            /></div
-        ></a>
-      </nav>
-    </header>
-    <div class="men">
-      <div class="burger-menu">
-        <div class="menu-icon" id="burger-icon">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
-      </div>
-      <nav class="nav-menu" id="nav-menu">
-        <ul>
+      <header>
+        <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo" />
+        <nav>
           <a href="zoomagazin.html"
-            ><div class="negr">Каталог <img src="../img/Vector.svg" /></div
+            ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
           ></a>
-          <img src="../img/-_.svg" class="strela o" />
-          <img src="../img/Line 5.svg" class="line" />
-          <a href="zooizbrannoe"
-            ><div class="negr">
+          <a href="zooizbrannoe.html"
+            ><div class="cerb">
               Избранное
               <img
                 src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
               /></div
           ></a>
-          <img src="../img/-_.svg" class="strela t" />
-          <img src="../img/Line 5.svg" class="line" />
-          <a href="#"
-            ><div class="negr">Корзина <img src="../img/Vector (1).svg" /></div
+          <a href="zookorzina.html"
+            ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
           ></a>
-          <img src="../img/-_.svg" class="strela th" />
-          <img src="../img/Line 5.svg" class="line" />
-          <a href="#"
-            ><div class="negr">
+          <a href="#" id="openRegistration"
+            >
+            <a href="#" id="openLogin">
+            <div class="cerb">
               Войти
               <img
                 src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
               /></div
           ></a>
-          <img src="../img/-_.svg" class="strela f" />
-          <img src="../img/Line 5.svg" class="line" />
-        </ul>
-      </nav>
-      <div style="height: 40px"></div>
-    </div>
+        </nav>
+      </header>
+      <div class="men">
+        <div class="burger-menu">
+          <div class="menu-icon" id="burger-icon">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
+        </div>
+        <nav class="nav-menu" id="nav-menu">
+          <ul>
+            <a href="zoomagazin.html"
+              ><div class="negr">Каталог <img src="../img/Vector.svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+            >
+            </a>
+            <img src="../img/Line 5.svg" class="line" />
+            <a href="zooizbrannoe.html"
+              ><div class="negr">
+                Избранное
+                <img
+                  src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+                /> <img src="../img/-_.svg" class="strela" /></div
+            ></a>
+            <img src="../img/Line 5.svg" class="line" />
+            <a href="zookorzina.html"
+              ><div class="negr">Корзина <img src="../img/Vector (1).svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+            ></a>
+            <img src="../img/Line 5.svg" class="line" />
+            <a href="#"
+              ><div class="negr">
+                Войти
+                <img
+                  src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+                /> <img src="../img/-_.svg" class="strela" /></div
+            ></a>
+            <img src="../img/Line 5.svg" class="line" />
+          </ul>
+        </nav>
+        <div style="height: 40px"></div>
+      </div>
     <div class="mod" id="registrationModal">
       <div class="mod-content">
         <span class="clos">&times;</span>
