--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -50,33 +50,30 @@
       </div>
       <nav class="nav-menu" id="nav-menu">
         <ul>
-          <a href="#"
-            ><div class="negr">Каталог <img src="../img/Vector.svg" /></div
-          ></a>
-          <img src="../img/-_.svg" class="strela o" />
+          <a href="zoomagazin.html"
+            ><div class="negr">Каталог <img src="../img/Vector.svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+          >
+          </a>
           <img src="../img/Line 5.svg" class="line" />
-          <a href="zooizbrannoe"
+          <a href="zooizbrannoe.html"
             ><div class="negr">
               Избранное
               <img
-                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
-              /></div
+                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+              /> <img src="../img/-_.svg" class="strela" /></div
           ></a>
-          <img src="../img/-_.svg" class="strela t" />
           <img src="../img/Line 5.svg" class="line" />
           <a href="zookorzina.html"
-            ><div class="negr">Корзина <img src="../img/Vector (1).svg" /></div
+            ><div class="negr">Корзина <img src="../img/Vector (1).svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
           ></a>
-          <img src="../img/-_.svg" class="strela th" />
           <img src="../img/Line 5.svg" class="line" />
           <a href="#"
             ><div class="negr">
               Войти
               <img
-                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
-              /></div
+                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+              /> <img src="../img/-_.svg" class="strela" /></div
           ></a>
-          <img src="../img/-_.svg" class="strela f" />
           <img src="../img/Line 5.svg" class="line" />
         </ul>
       </nav>
