--- a/project pages/zooizbrannoe.html
+++ b/project pages/zooizbrannoe.html
@@ -21,18 +21,20 @@
         <a href="zoomagazin.html"
           ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
         ></a>
-        <a href="#"
+        <a href="zooizbrannoe.html"
           ><div class="cerb">
             Избранное
             <img
               src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
             /></div
         ></a>
-        <a href="#"
+        <a href="zookorzina.html"
           ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
         ></a>
-        <a href="#"
-          ><div class="cerb">
+        <a href="#" id="openRegistration"
+          >
+          <a href="#" id="openLogin">
+          <div class="cerb">
             Войти
             <img
               src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
@@ -50,33 +52,30 @@
       </div>
       <nav class="nav-menu" id="nav-menu">
         <ul>
-          <a href="#"
-            ><div class="negr">Каталог <img src="../img/Vector.svg" /></div
-          ></a>
-          <img src="../img/-_.svg" class="strela o" />
+          <a href="zoomagazin.html"
+            ><div class="negr">Каталог <img src="../img/Vector.svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+          >
+          </a>
           <img src="../img/Line 5.svg" class="line" />
-          <a href="#"
+          <a href="zooizbrannoe.html"
             ><div class="negr">
               Избранное
               <img
-                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
-              /></div
+                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+              /> <img src="../img/-_.svg" class="strela" /></div
           ></a>
-          <img src="../img/-_.svg" class="strela t" />
           <img src="../img/Line 5.svg" class="line" />
-          <a href="#"
-            ><div class="negr">Корзина <img src="../img/Vector (1).svg" /></div
+          <a href="zookorzina.html"
+            ><div class="negr">Корзина <img src="../img/Vector (1).svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
           ></a>
-          <img src="../img/-_.svg" class="strela th" />
           <img src="../img/Line 5.svg" class="line" />
           <a href="#"
             ><div class="negr">
               Войти
               <img
-                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
-              /></div
+                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+              /> <img src="../img/-_.svg" class="strela" /></div
           ></a>
-          <img src="../img/-_.svg" class="strela f" />
           <img src="../img/Line 5.svg" class="line" />
         </ul>
       </nav>
@@ -85,6 +84,22 @@
     <main>
       <div class="nazv"><h1>Избранное</h1></div>
       <div class="products" id="productContainer"></div>
+      <div id="productModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <div class="modal-body">
+            <img src="" alt="" class="modal-image" />
+            <div class="modal-details">
+              <h2 class="modal-title"></h2>
+              <p class="modal-description"></p>
+              <div class="modal-price"></div>
+              <div class="knop">
+                <button class="modal-order-button" data-product-id="">В корзину</button>
+                <button class="love" data-product-id=""><img src="../img/x.svg"></button>
+              </div>
+            </div>          
+          </div>
+        </div>
     </main>
     <footer class="footer">
       <div class="footer-section">
@@ -136,16 +151,20 @@
         return `
     <div class="product-wrapper" data-product-id="${product.id}">
       <div class="card">
-        <img src="${product.image}" alt="${product.name}" loading="lazy">
-        <div class="text-block">
+        <img src="${product.image}" class="product-image" alt="${product.name}">
+        <div class="text-block product-info">
           <h3>${product.name}</h3>
           <p class="descr">${product.description}</p>
           <div class="price">${formatPrice(product.price)}</div>
         </div>
-        <button class="btn" onclick="addToCart(${product.id})">Заказать</button>
-        <button class="love" onclick="removeFromIzb(${
-          product.id
-        })"><img src="../img/х.svg"></button>
+        <div class="knop">
+          <button class="btn" onclick="addToCart(${
+            product.id
+          })">Заказать</button>
+          <button class="love" onclick="removeFromIzb(${
+            product.id
+          })"><img src="../img/х.svg"></button>
+        </div>
       </div>
     </div>
   `;
@@ -187,6 +206,73 @@
       }
 
       loadProducts();
+      //карточки
+      const modal = document.getElementById("productModal");
+      function openModal(productId) {
+        if (products.length === 0) {
+          console.error("Продукты не загружены");
+          return;
+        }
+        const product = products.find((p) => p.id === productId);
+        if (product) {
+          // Обновляем контент модалки
+          document.querySelector(".modal-image").src = product.image;
+          document.querySelector(".modal-image").alt = product.name;
+          document.querySelector(".modal-title").textContent = product.name;
+          document.querySelector(".modal-description").textContent =
+            product.description;
+          document.querySelector(".modal-price").textContent = formatPrice(
+            product.price
+          );
+
+          const modal = document.getElementById("productModal");
+          const addToCartBtn = modal.querySelector(".modal-order-button");
+          const addToFavBtn = modal.querySelector(".love");
+
+          addToCartBtn.dataset.productId = productId;
+          addToFavBtn.dataset.productId = productId;
+
+          modal.style.display = "block";
+        } else {
+          console.error("Product not found with id:", productId);
+        }
+      }
+
+      document.addEventListener("click", function (e) {
+    if (e.target.closest('.btn, .love')) return;
+    const productCard = e.target.closest(".product-wrapper");
+    if (productCard) {
+        const productId = productCard.dataset.productId;
+        openModal(productId);
+    }
+});
+
+      const closeBtn = document.querySelector(".modal .close");
+      closeBtn.addEventListener("click", () => {
+        modal.style.display = "none";
+      });
+
+      window.addEventListener("click", (event) => {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      });
+      document
+        .getElementById("productModal")
+        .addEventListener("click", function (e) {
+          const target = e.target.closest(".modal-order-button, .love");
+
+          if (!target) return;
+
+          const productId = target.dataset.productId;
+
+          if (target.classList.contains("modal-order-button")) {
+            addToCart(productId);
+          } else if (target.classList.contains("love")) {
+            removeFromIzb(product.id);
+          }
+        });
+
       //авторизация регистрация
       document.addEventListener("DOMContentLoaded", function () {
         const registrationModal = document.getElementById("registrationModal");
