--- a/project pages/zooizbrannoe.html
+++ b/project pages/zooizbrannoe.html
@@ -163,7 +163,7 @@
           })">Заказать</button>
           <button class="love" onclick="removeFromIzb(${
             product.id
-          })"><img src="../img/х.svg"></button>
+          })"><img src="../img/x.svg"></button>
         </div>
       </div>
     </div>
@@ -208,71 +208,64 @@
       loadProducts();
       //карточки
       const modal = document.getElementById("productModal");
-      function openModal(productId) {
-        if (products.length === 0) {
-          console.error("Продукты не загружены");
-          return;
-        }
-        const product = products.find((p) => p.id === productId);
-        if (product) {
-          // Обновляем контент модалки
-          document.querySelector(".modal-image").src = product.image;
-          document.querySelector(".modal-image").alt = product.name;
-          document.querySelector(".modal-title").textContent = product.name;
-          document.querySelector(".modal-description").textContent =
-            product.description;
-          document.querySelector(".modal-price").textContent = formatPrice(
-            product.price
-          );
-
-          const modal = document.getElementById("productModal");
-          const addToCartBtn = modal.querySelector(".modal-order-button");
-          const addToFavBtn = modal.querySelector(".love");
-
-          addToCartBtn.dataset.productId = productId;
-          addToFavBtn.dataset.productId = productId;
-
-          modal.style.display = "block";
-        } else {
-          console.error("Product not found with id:", productId);
-        }
-      }
-
+      
       document.addEventListener("click", function (e) {
     if (e.target.closest('.btn, .love')) return;
     const productCard = e.target.closest(".product-wrapper");
     if (productCard) {
-        const productId = productCard.dataset.productId;
-        openModal(productId);
+      const productId = Number(productCard.dataset.productId);
+      openModal(productId);
+    }
+});
+function openModal(productId) {
+    if (products.length === 0) {
+        alert("Продукты не загружены");
+        return;
+    }
+    const product = products.find((p) => p.id === productId);
+    if (product) {
+        document.querySelector(".modal-image").src = product.image;
+        document.querySelector(".modal-image").alt = product.name;
+        document.querySelector(".modal-title").textContent = product.name;
+        document.querySelector(".modal-description").textContent = product.description;
+        document.querySelector(".modal-price").textContent = formatPrice(product.price);
+
+        const addToCartBtn = modal.querySelector(".modal-order-button");
+        const addToFavBtn = modal.querySelector(".love");
+
+        addToCartBtn.dataset.productId = productId;
+        addToFavBtn.dataset.productId = productId;
+
+        modal.style.display = "block";
+    } else {
+        alert(`Продукт с ID ${productId} не найден.`);
+    }
+}
+
+const closeBtn = document.querySelector(".modal .close");
+closeBtn.addEventListener("click", () => {
+    modal.style.display = "none";
+});
+
+window.addEventListener("click", (event) => {
+    if (event.target == modal) {
+        modal.style.display = "none";
     }
 });
 
-      const closeBtn = document.querySelector(".modal .close");
-      closeBtn.addEventListener("click", () => {
-        modal.style.display = "none";
-      });
+document.getElementById("productModal").addEventListener("click", function (e) {
+    const target = e.target.closest(".modal-order-button, .love");
 
-      window.addEventListener("click", (event) => {
-        if (event.target == modal) {
-          modal.style.display = "none";
-        }
-      });
-      document
-        .getElementById("productModal")
-        .addEventListener("click", function (e) {
-          const target = e.target.closest(".modal-order-button, .love");
+    if (!target) return;
 
-          if (!target) return;
+    const productId = Number(target.dataset.productId);
 
-          const productId = target.dataset.productId;
-
-          if (target.classList.contains("modal-order-button")) {
-            addToCart(productId);
-          } else if (target.classList.contains("love")) {
-            removeFromIzb(product.id);
-          }
-        });
-
+    if (target.classList.contains("modal-order-button")) {
+        addToCart(productId);
+    } else if (target.classList.contains("love")) {
+        removeFromIzb(productId); 
+    }
+});
       //авторизация регистрация
       document.addEventListener("DOMContentLoaded", function () {
         const registrationModal = document.getElementById("registrationModal");
