Убрала lazy загрузку

--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -292,7 +292,7 @@
         return `
           <div class="product-wrapper" data-product-id="${product.id}">
             <div class="card">
-              <img src="${product.image}" alt="${product.name}" loading="lazy">
+              <img src="${product.image}" alt="${product.name}">
               <div class="text-block">
                 <h3>${product.name}</h3>
                 <p class="descr">${product.description}</p>
