Реализация фильтрации по категориям

--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -9,7 +9,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
   <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=mXASaQqaoMiA9Pzaun8I8RCY9NqRrqNGfzTArTQrsOHM13fBUpm7qGR5djC1iWIIY5Y56F1LThvu4rY0IJJ2Jj3C1lsQjPslY2zHKLlk3MBqF6lJ7dW5rw_dFUwnPWj5" charset="UTF-8"></script></head>
-  <body>
+  <style>
+
+.category-filter {
+  margin-bottom: 10px;
+}
+
+.category-header {
+  cursor: pointer;
+  padding: 10px;
+  background: #fff;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.subcategory-item {
+  display: block;
+  cursor: pointer;
+}
+  </style>
   </head>
   <body>
     <article>
@@ -211,7 +231,9 @@
       </div>
     </div>
     <main>
-      <div class="scrollbar" id="scrollbar"></div>
+      <div class="filters-container">
+        <div class="scrollbar" id="scrollbar"></div>
+      </div>
       <div class="products" id="productContainer"></div>
       <div id="productModal" class="modal">
         <div class="modal-content">
@@ -330,23 +352,67 @@
       }
 
       function renderRazdel() {
-        const categories = [
-          ...new Set(products.map((product) => product.category)),
-        ];
-        let razdelHTML = categories
-          .map(function (category) {
-            return createScrollbar(category);
-          })
-          .join("");
-        document.getElementById("scrollbar").innerHTML = razdelHTML;
-      }
+  const categories = [...new Set(products.map(p => p.category))];
+  let razdelHTML = '';
 
-      function filterProducts(category) {
-        const filteredProducts = products.filter(
-          (product) => product.category === category
-        );
-        renderProducts(filteredProducts);
-      }
+  categories.forEach(category => {
+    const categoryRazdels = [...new Set(products
+      .filter(p => p.category === category)
+      .map(p => p.razdel)
+    )];
+
+    razdelHTML += `
+      <div class="category-filter">
+        <div class="category-header" onclick="toggleCategory(this)">
+          ${category}
+        </div>
+        <div class="subcategories" style="display:none;">
+          ${categoryRazdels.map(razdel => `
+            <label class="subcategory-item">
+              <input type="checkbox" 
+                     class="razdel-checkbox" 
+                     value="${category}|${razdel}"
+                     onchange="handleFilterChange()">
+              ${razdel}
+            </label>
+          `).join('')}
+        </div>
+      </div>
+    `;
+  });
+
+  document.getElementById("scrollbar").innerHTML = razdelHTML;
+}
+
+function toggleCategory(header) {
+  const subcategories = header.nextElementSibling;
+  const arrow = header.querySelector('.arrow');
+  subcategories.style.display = subcategories.style.display === 'none' ? 'block' : 'none';
+}
+
+let activeFilters = new Set();
+
+function handleFilterChange() {
+  activeFilters.clear();
+  document.querySelectorAll('.razdel-checkbox:checked').forEach(checkbox => {
+    activeFilters.add(checkbox.value);
+  });
+  applyFilters();
+}
+
+function applyFilters() {
+  if (activeFilters.size === 0) {
+    renderProducts(products);
+    return;
+  }
+
+  const filtered = products.filter(product => {
+    const categoryKey = `${product.category}|${product.razdel}`;
+    return activeFilters.has(categoryKey);
+  });
+
+  renderProducts(filtered);
+}
       loadProducts();
 
       //модалки карточек товара
