--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -62,6 +62,9 @@
         ></a>
       </nav>
     </header>
+    <div class="search-container">
+      <input type="text" id="searchInput" placeholder="Поиск по каталогу..." oninput="handleSearch()">
+    </div>
     <div class="men">
       <div class="burger-menu">
         <div class="menu-icon" id="burger-icon">
